(11/03/15)
==========

· ODROID: Added Tweaks > others script
· Added Tweaks > removepkg script
· Update Info > check lastmod image

(09/03/15)
==========

· ODROID: Added Tweaks > autologin script

(08/03/15)
==========

· piKiss.sh refactorized

(11/01/15)
==========

· Updated ownCloud to 7.0.4

(11/01/15)
==========

· Added Info > Lynis (security auditing tool)

(29/12/14)
==========

· Update Tweaks > other & removepkg scripts. 
· Update Games > minecraft, quake, crispydoom.
· Update Emus > pifba.
· Update Info > check last images, test inet scripts.

(08/12/14)
==========

· Update Server > NGINX (latest compile) web server

(06/12/14)
==========

· Update Emulators > UAE4ALL ver 2.5.3.2

(25/11/14)
==========

· Update Emulators > Final Burn Alpha 2x for Raspberry Pi (4 players)

(24/11/14)
==========

· Updated emulators > openMSX 0.11.0

(04/11/14)
==========

· Updated Tweaks > Added improvement on others.sh

(02/11/14)
==========

· Updated Server > Git Server

(08/10/14)
==========

· Updated Server > MiniDLNA to 1.1.4

(07/10/14)
==========

· Added Info > Tinymembench

(29/09/14)
==========

· Added Info > Test Internet bandwidth

(27/09/14)
==========

· Added Emula > MSX

· Added Others > Check SD partition

(16/09/14)
==========

· Added Other > Synergy

(9/09/14)
=========

· Added Other > Fix problems with Raspbian OS

(4/09/14)
=========

· Added Info > SD Benchmark

(25/08/14)
==========

· Added Emulators > UAE4ALL 0.5

(14/08/14)
==========

· Added Emulators > UAE4ALL 0.3 RC4 

· Added Server > ownCloud 7.0.1 with NginX and SSL

(13/08/14)
==========

· Added Server > Samba Config to share directory

(11/08/14)
==========

· Added Server > Web Server > Nginx

(11/08/14)
==========

· Added Config > SSID Configurator

(06/08/14)
==========

· Aircrack script fixed!

(30/07/14)
==========

· Config > backup

(04/07/14)
==========

· Added Others > Install GCC 4.7 on Raspberry Pi

(03/07/14)
==========

· Added Server > smtp mail config
