@@ -1,0 +1,9 @@
+#!/bin/bash
+#
+# Description : Install a FTP server
+# Author      : Jose Cerrejon Gonzalez (ulysess@gmail_dot._com)
+# Version     : 0.1 (11/Mar/15)
+#
+# Help        · http://www.tuxmaniacs.it/2015/03/server-ftp-con-raspberry-pi.html
+#
+clear
